fix: h1 align

--- a/christmas-shop/style/common/typography.scss
+++ b/christmas-shop/style/common/typography.scss
@@ -1,5 +1,6 @@
 .h1 {
-  margin: 10px 0 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-family: Montserrat, sans-serif;
   font-style: normal;
   font-weight: 600;
